[package]
name = "aoc_2020"
version = "0.1.0"
authors = ["user"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
itertools = "0.13.0"
parse-display = "0.10.0"
parse-display-derive = "0.10.0"

regex = "1.4.2"
lazy_static = "1.4.0"
num-complex = "0.4.2"
